--- a/FullStack/src/components/BmiCalculator/BmiCalculator.css
+++ b/FullStack/src/components/BmiCalculator/BmiCalculator.css
@@ -21,7 +21,7 @@ body{
   margin-top: 0px;
   margin-bottom: 1rem;
   align-items: center; /* Centers content horizontally */
-  background-color:bisque;
+  background-color:black;
   
 }
 .c-bmi fieldset {
