--- a/FullStack/src/components/Navbar/Navbar.css
+++ b/FullStack/src/components/Navbar/Navbar.css
@@ -16,6 +16,7 @@ body {
   align-items: center;
   padding: 20px 40px;
   background-color: black;
+  margin-top: 0;
   color: white;
   position: sticky;
   top: 0;
